--- a/lambda/package.json
+++ b/lambda/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ask-sdk-core": "^2.6.0",
     "ask-sdk-model": "^1.18.0",
-    "aws-sdk": "^2.326.0"
+    "aws-sdk": "^2.326.0",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.8.11"
   }
 }
